tests/golden/repl/debug-error.rego
package debug_error

test_crash {
  x = 1
  x + "crash"
}
